--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ceph-deploy (1.5.36-1sci8u1) scibian8; urgency=medium
+
+  * add remoto lib ceph_deploy/lib/vendor/
+
+ -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Thu, 19 Jul 2018 11:34:02 +0200
+
 ceph-deploy (1.5.36sci8u1) scibian8; urgency=medium
 
   * rebuild scibian8
