--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,20 @@
-ceph-deploy (1.5.36-1sci9u1) scibian9; urgency=medium
+ceph-deploy (1.5.39) stable; urgency=medium
 
-  * add remoto lib ceph_deploy/lib/vendor/ 
+  * New upstream release
 
- -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Thu, 19 Jul 2018 11:48:12 +0200
+ -- Ceph Release Team <ceph-maintainers@ceph.com>  Fri, 01 Sep 2017 11:45:54 +0000
 
-ceph-deploy (1.5.36sci9u1) scibian9; urgency=medium
+ceph-deploy (1.5.38) stable; urgency=medium
 
-  * rebuild scibian9 
+  * New upstream release
 
- -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Wed, 18 Jul 2018 18:22:54 +0200
+ -- Ceph Release Team <ceph-maintainers@ceph.com>  Thu, 25 May 2017 12:35:46 +0000
 
-ceph-deploy (1.5.36sci8u1) scibian8; urgency=medium
+ceph-deploy (1.5.37) stable; urgency=medium
 
-  * rebuild scibian8
+  * New upstream release
 
- -- Nicolas Meaux <nicolas-externe.meaux@edf.fr>  Wed, 18 Jul 2018 18:18:05 +0200
+ -- Alfredo Deza <adeza@redhat.com>  Tue, 03 Jan 2017 21:19:14 +0000
 
 ceph-deploy (1.5.36) stable; urgency=medium
 
